syntax = "proto3";
option java_multiple_files = true;

package grpc;

message GenericRequest {
  string requestType = 1; // Contains the oepration to execute on this Request

  oneof data {
      MasterUserDTO masterUser = 3;
      // Add more DTO's here.
  }
}

message GenericResponse {
  int32 statusCode = 1; // What happened? HTML corresponding code here.

  oneof data {
    MasterUserDTO masterUser = 3;
    // Add more DTO's here.
  }
}

message MasterUserDTO {
  int64 id = 1;
  string masterUsername  = 2;
  string masterPassword = 3;
}

service PasswordManagerService {
  rpc HandleRequest(GenericRequest) returns (GenericResponse);
}