syntax = "proto3";
option java_multiple_files = true;

package grpc;

message UserData {
  int32 id = 1;
  string username = 2;
  string encryptedPassword = 3;
}

message UserNameAndPswd {
  string username  = 1;
  string encryptedPassword = 2;
}

service UserService {
  // Create
  rpc registerUser(UserData) returns (UserData);

  // Get
  rpc getUser(UserNameAndPswd) returns (UserData);

  // TODO: Missing Update, Delete and GetAll CRUD methods! (Maybe more?)
}